Refactor and clean.